[gd_scene load_steps=3 format=3 uid="uid://24cpksp7nedu"]

[ext_resource type="Texture2D" uid="uid://5eb8e3sjsrhi" path="res://assets/temp/Light.png" id="1_y0y7m"]
[ext_resource type="Script" path="res://scenes/light/point_light_2d.gd" id="2_xj06h"]

[node name="PointLight2D" type="PointLight2D"]
scale = Vector2(0.3, 0.3)
energy = 2.0
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("1_y0y7m")
offset = Vector2(400, 0)
script = ExtResource("2_xj06h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(2, 0)
polygon = PackedVector2Array(692, -254, 734, -240, 769, -191, 805, -69, 807, 50, 784, 155, 751, 215, 709, 247, 683, 249, -2, 32, -13, 20, -14, -2, 4, -18)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(806, 0)
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
target_position = Vector2(806, 0)
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="."]
target_position = Vector2(806, 0)
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="."]
target_position = Vector2(806, 0)
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="."]
target_position = Vector2(806, 0)
collide_with_areas = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
